v2.0.0, migrate to gradle 8 and java21, compatible with gradle config cache